[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "packcharm"
version = "0.1.0"
authors = [
  { name="Dylan Stephano-Shachter", email="dylan.stephano-shachter@canonical.com" }
]
description = "A simple packer for charms"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: POSIX",
  "Development Status :: 3 - Alpha",
]
dependencies = ["pyyaml"]

[project.urls]
Homepage = "https://github.com/dstathis/packcharm"
"Bug Tracker" = "https://github.com/dstathis/packcharm/issues"

[project.scripts]
cos-alerter = "packcharm.packcharm:main"
